2004-03-06  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/protected.c: restored GETHOSTBYNAME mutex, that was accidental
      removed by last commit.

2004-03-05  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/octstr.c: don't allocate temporarely Octstr in 'octstr_append_decimal'.

2004-03-05  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/protected.[ch]: fixed non reentrant time functions, those _must_
      use only one mutex instead of mutex per time function. Quote from man
      page: The return value points to a statically allocated struct which
            might be overwritten by subsequent calls to any of the date and
            time functions.
      Added 'gw_mktime' function.
    * wap/cookies.c: changed 'mktime' call to 'gw_mktime'.

2004-02-26 Stipe Tolj  <tolj@wapme-systems.de>
    * doc/userguide/userguide.xml: update of OISD section.
    * gw/smscconn[_p].[ch], gw/smsc/smsc.c, gw/smsc_oisd.c, gw/smsc/smsc_p,h:
      Rewrite of OISD module to smscconn API. Thankt a lot to 
      "Dariusz Markowicz" <dariuszm@tenbit.pl> for this patch.
      [see Mantis BUG#59 for the diff file]

2004-02-24 Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsbox.c: fixed bug that config directive 'sendsms-chars' was not used
      at all in the logic, only the default remained. Thanks to 
      "francesco emmi" <francesco.emmi@a-tono.com> for submitting this report
      and Edwin for acknoledging it.
      [Msg-ID: <1077126696.1011.49.camel@verne>]

2004-02-19 Stipe Tolj  <tolj@wapme-systems.de>
    * wap/wsp_server_method_states.def: removed the ambicious 0x00 byte removal
      that was device specific for the Siemens S35. Thanks to Paul and 
      Vjacheslav for pointing this out. Sorry for the delay removal. 

2004-02-19 Stipe Tolj  <tolj@wapme-systems.de>
    * gw/dlr.c: fixed MO boxc routing in case we have an directly received
      NACK from SMSC. The DLR message wouldn't be returned to the same 
      smsbox-id connection.
